Edited file names and styling

--- a/stylepractice.css
+++ b/stylepractice.css
@@ -1,4 +1,6 @@
-.carousel h2 {text-align:center}
+.carousel h2 {text-align:center
+}
+.carousel{padding:5px;}
 .main-information > h2{text-align: center;}
 .main-information> h3{text-align: center;}
 
