--- a/styletimetable.css
+++ b/styletimetable.css
@@ -1,27 +1,34 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    height: 100%;
+}
+
+.hero-container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.hero-image{ 
+    width:100%;
+    height:auto;
+    display:block;
+}
+.hero-text {
+    position: absolute;
+    top: 50%;
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7); /* Corrected property */
+}
+
 footer {
-    color:gray;
-    font-size:0.8rem;
+    color: gray;
+    font-size: 0.8rem;
     padding: 0 15px;
     text-align: center;
-    }
-    *{
-        margin:0;
-        padding:0;
-        box-sizing: border-box;
-
-    }
-    body,html{
-        height: 100%;
-        
-    }
-    .hero-container{
-        position:relative;
-        text-align: center;
-        color:white;
-    }
-    .hero-text{
-        position: absolute;
-        top:50%;
-        transform:translate(-50%, -50%);
-        text-show: 2px 2px 8px rgba(0,0,0,0.7);
-    }
+}
