--- a/styletimetable.css
+++ b/styletimetable.css
@@ -17,6 +17,7 @@ body, html {
     width:100%;
     height:auto;
     display:block;
+    opacity: 0.7;
 }
 .hero-text {
     position: absolute;
@@ -25,6 +26,7 @@ body, html {
     transform: translate(-50%, -50%);
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7); /* Corrected property */
 }
+
 
 footer {
     color: gray;
